--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@ bluesky-arm64-v8a_armeabi-v7a-release_old.aab
 *.aab
 pics/1 copy.png
 pics/logo_minimal_white copy.png
-docs_doxygen/html/
+docs_dox*/
